--- a/thabet.html
+++ b/thabet.html
@@ -12,7 +12,7 @@
 
 <div class="container">
 
-<p>Vậy, bạn đã thu thập được các thông tin gì về nhà cái này? Việc đăng ký vào nhà cái này ra sao? Liệu rằng nahf cái <a href="https://thabet.asia/">Thabet</a> có phải là nhà cái uy tín và chất lượng?</p>
+<p>Vậy, bạn đã thu thập được các thông tin gì về nhà cái này? Việc đăng ký vào nhà cái này ra sao? Liệu rằng nhà cái <a href="https://thabet.asia/">Thabet</a> có phải là nhà cái uy tín và chất lượng?</p>
 
 <h2>Giới thiệu tổng quan về nhà cái Thabet.asia</h2>
 
